Implementing Chromecast version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-cast-api-enabled="true">
     <head>
         <title>RemoteDOM PoC</title>
         <script src="http://cdn.peerjs.com/0/peer.min.js"></script>
